Bug 1640835 - Bail out early from InputQueue::MainThreadTimeout if sControllerThread has been already discarded. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D85335