gfx/layers/apz/src/InputQueue.cpp
@@ -677,6 +677,11 @@ InputBlockState* InputQueue::FindBlockForId(uint64_t aInputBlockId,
 }
 
 void InputQueue::MainThreadTimeout(uint64_t aInputBlockId) {
+  // It's possible that this function gets called after the controller thread
+  // was discarded during shutdown.
+  if (!APZThreadUtils::IsControllerThreadAlive()) {
+    return;
+  }
   APZThreadUtils::AssertOnControllerThread();
 
   INPQ_LOG("got a main thread timeout; block=%" PRIu64 "\n", aInputBlockId);
